Fixed and optimized remote interface.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8874 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -1,94 +1,42 @@
 403 Please Share
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
- <title>Please Share: Shareaza</title>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
- <style type="text/css">
-html, body {
-	margin: 0px;
-	background-color: white;
-	height: 100%;
-	width: 100%;
-	font-family: Verdana;
-	}
-a {
-	color: black;
-	text-decoration: none;
-	}
-a:hover {
-	color: blue;
-	text-decoration: underline;
-	}
-.header {
-	border: 0px;
-	border-bottom: 1px solid black;
-	text-align: left;
-	font-weight: bold;
-	margin: 0px;
-	padding: 0px;
-	}
-.header img { border: 0px; margin-bottom: -3px;}
-.footer {
-	border: 0px;
-	border-top: 1px solid black;
-	text-align: right;
-	font-size: 10px;
-	color: maroon;
-	}
- </style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title><% SmartAgent %> : Please Share</title>
+<meta name="robots" content="noindex, nofollow" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body>
-<table style="height: 100%; width: 100%;" cellspacing="0">
 
-<tr style="height: 48px;">
-	<td class="header" style="background-image: url('http://shareaza.sourceforge.net/images/top-tile.jpg');">
-		<a href="http://shareaza.sourceforge.net/"><img src="http://shareaza.sourceforge.net/images/Top.png" alt="SHAREAZA"/></a>
+<div class="headerborder">
+	<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
+</div>
 
-		<span style="position: relative; top: -20px; left: 10px;">Please Share</span>
-	</td>
-</tr>
-
-<tr>
-<td valign="top">
-	<br/>
-	<table width="100%">
-		<tr>
-			<td style="font-size: 13px; padding-left: 35px; padding-right: 35px;">
-
-				<h3>Please Share</h3>
-				<p>
-					Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden on available upload resources.
-				</p>
-
-				<p>
-					It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.
-				</p>
-				<br/>
-
-				<h3>Get Shareaza Now</h3>
-				<p>
-					Shareaza is the most powerful and feature-rich P2P client for Windows. And it's completely free. No ads, no spyware, no guilting you to upgrade to a commercial version.
-				</p>
-
-				<span style="font-size: 10px; position: relative; right: -5px;">
-					<a href="http://shareaza.sourceforge.net/?id=download"><img src="http://shareaza.sourceforge.net/images/Shareaza.GIF" style="vertical-align: middle; border: 0px;" alt="S logo"/></a>
-					<span style="position: relative; right: -5px; bottom: -5px;"><a href="http://shareaza.sourceforge.net/?id=download">Download now at the Shareaza web site</a></span>
-				</span>
-
-				<br/><br/>
-			</td>
-		</tr>
+<div align="center" class="page">
+	<table width="800" border="0">
+	<tr>
+		<td>
+			<h1>Please Share</h1>
+			<p>
+				Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden on available upload resources.
+			</p>
+			<p>
+				It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.
+			</p>
+			<h1>What Is <% Client %>?</h1>
+			<p>
+				<% Client %> is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. <% Client %> is <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.
+			</p>
+			<ul>
+				<li><a href="http://shareaza.sourceforge.net/">Visit the <% Client %> Homepage</a></li>
+				<li><a href="http://shareaza.sourceforge.net/?id=download">Get <% Client %> Now</a></li>
+			</ul>
+		</td>
+	</tr>
 	</table>
-</td>
-</tr>
-<tr style="height: 25px;">
-	<td valign="middle" class="footer" style="background-image: url('http://shareaza.sourceforge.net/images/bot_02.jpg');">
-		<span style="margin-right: 8px;">Shareaza v<% Version %></span>
-
-	</td>
-</tr>
-</table>
-
+</div>
 </body>
 </html>
