--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -1,143 +1,63 @@
 200 OK
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Shareaza Node Information</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title><% SmartAgent %> : Node Information</title>
 <meta name="robots" content="noindex, nofollow" />
-<style type="text/css">
-body {
-	margin: 0px;
-	padding:0px;
-	background-color: #FDFDFD;
-}
-.headerborder {
-	border-width: 1px;
-	border-bottom-style: solid;
-	border-color: #999999;
-}
-body,td,th {
-	font-family: Tahoma, Verdana, Arial, sans-serif;
-	font-size: 12px; 
-	color: #666666;
-}
-a:link {
-	color: #333333;
-	text-decoration: none;
-}
-a:visited {
-	text-decoration: none;
-	color: #333333;
-}
-a:hover {
-	text-decoration: underline;
-	color: #333333;
-}
-a:active {
-	text-decoration: none;
-	color: #333333;
-}
-.boldtext {
-	font-size: 12px;
-	font-weight: bold;
-}
-.solidborder {
-	border: 1px solid #999999;
-}
-.text1 {color: #333333}
-.text2 {
-	font-size: 12px;
-	font-weight: bold;
-	color: #333333;
-	padding: 4px;
-	}
-.text3 {
-	color: #000000;
-	font-size: 14px;
-	}
-.text4 {
-	color: #000000;
-	font-size: 11px;
-	}
-.blacktext {color: #000000}
-
-table.nodeinfo { border-bottom: solid #999999 1px;}
-th	{
-	border-bottom: solid #999999 1px;
-	padding-bottom: 8px;
-	background-color: white;
-	}
-.lcol { border-left: solid #999999 1px;}
-.rcol { border-right: solid #999999 1px;}
-
-table.nodeinfo tr td {
-	background-color: #F7F7F7;
-	padding: 11px 0 10px 12px;
-	text-align: center;
-	}
-</style>
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body>
 
-<div class="headerborder" style="width: 100%; background-image:url(/remote/header_2.png);">
-  <img src="/remote/header_1.png" width="624" height="172" alt="Shareaza header" />
+<div class="headerborder">
+	<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 </div>
 
-<div align="center"><br />
-  <table width="800" border="0" cellspacing="4" cellpadding="6"> <!-- NODE BOX START-->
-	<tr align="center" bgcolor="#999999">
-	  <td colspan="2" bgcolor="#CCCCCC" class="solidborder blacktext">This node is powered by <a href="http://shareaza.sourceforge.net/?id=download" target="_top"><strong>Shareaza <% Version %></strong></a></td>
-	</tr>
+<div align="center" class="page">
+	<table width="800" border="0">
 	<tr>
-	  <td width="50%" align="center" valign="top" class="solidborder"><a href="gnutella:browse:<% ListenIP %>"><strong>Browse Node</strong></a> In Shareaza</td>
-	  <td width="50%" align="center" valign="top" class="solidborder"><a href="/remote/" target="_top"><strong>Remotely Access </strong></a>this node</td>
-	</tr>
-	<tr>
-	  <td colspan="2" align="center" valign="top">
-
-			<table width="630" border="0" cellspacing="0" class="nodeinfo">
-				<tr>
-				  <th width="170" align="center" valign="top" class="text2">Neighbor Address</th>
-				  <th width="100" align="center" valign="top" class="text2">Uptime</th>
-				  <th width="100" align="center" valign="top" class="text2">Mode</th>
-				  <th width="170" align="center" valign="top" class="text2">User Agent</th>
-				  <th width="80" align="center" valign="top" class="text2">&nbsp;</th>
-				</tr>	
-			  
-				<% Neighbours 
-				<tr>
-					<td class="lcol"><a href="gnutella:host:%s:%lu">%s:%lu</a></td>
-					<td>%i:%.2i:%.2i</td><td>%s</td>
-					<td>%s</td>
-					<td class="rcol"><a href="http://%s:%lu/">Browse</a></td>
-				</tr> 
-				%>
-				
-		 	</table>
+		<td>
+			<h1>This node is powered by <% SmartAgent %></h1>
+			<ul>
+				<li><a href="gnutella:browse:<% ListenIP %>">Browse this node in <% Client %></a></li>
+				<li><a href="/remote/">Remotely access this node</a></li>
+			</ul>
+			<h1>What Is <% Client %>?</h1>
+			<p>
+				<% Client %> is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. <% Client %> is <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.
+			</p>
+			<ul>
+				<li><a href="http://shareaza.sourceforge.net/">Visit the <% Client %> Homepage</a></li>
+				<li><a href="http://shareaza.sourceforge.net/?id=download">Get <% Client %> Now</a></li>
+			</ul>
+			<h1>Neighbours</h1>
 		</td>
 	</tr>
-  </table> <!-- NODE BOX END -->
-
-  <br />
-  <table width="800" border="0" cellpadding="4" cellspacing="0" bgcolor="#F8F8F8" class="solidborder">
-	<tr align="center" valign="top">
-	  <td colspan="2" bgcolor="#CFCFCF" class="headerborder blacktext"><strong>What Is Shareaza?</strong></td>
-	</tr>
 	<tr>
-	  <td rowspan="2" align="left" valign="top" style="width: 35px"><img src="/favicon.ico" alt="raza" width="32" height="32" /></td>
-	  <td valign="top" class="text3">Shareaza is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. Shareaza is 
-	  <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.</td>
+		<td align="center" valign="top">
+			<table width="630" border="0" cellspacing="0" class="nodeinfo">
+			<tr>
+				<th width="170" align="center" valign="top">Neighbor Address</th>
+				<th width="100" align="center" valign="top">Uptime</th>
+				<th width="100" align="center" valign="top">Mode</th>
+				<th width="170" align="center" valign="top">User Agent</th>
+				<th width="80" align="center" valign="top">&nbsp;</th>
+			</tr>	
+			<% Neighbours 
+			<tr>
+				<td class="lcol"><a href="gnutella:host:%s:%lu">%s:%lu</a></td>
+				<td>%i:%.2i:%.2i</td>
+				<td>%s</td>
+				<td>%s</td>
+				<td class="rcol"><a href="http://%s:%lu/">Browse</a></td>
+			</tr> 
+			%>
+			</table>
+		</td>
 	</tr>
-	<tr>
-	  <td valign="top">
-	  <ul>
-		  <li class="text1"><a href="http://shareaza.sourceforge.net/" target="_top">Visit the Shareaza Homepage</a> </li>
-		  <li class="text1"><a href="http://shareaza.sourceforge.net/?id=download" target="_top">Check out the latest Shareaza Release</a></li>
-	  </ul>	 </td>
-	</tr>
-  </table>
-  <br />
-  <br />
+	</table>
 </div>
 </body>
 </html>
