css optimizations. much much more to come
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8912 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -9,11 +9,9 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
-<body>
+<body class="imgheader">
 
-<div class="headerborder">
-	<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
-</div>
+<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 
 <div align="center" class="page">
 	<table width="800" border="0">
