--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -9,11 +9,9 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
-<body>
+<body class="imgheader">
 
-<div class="headerborder">
-	<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
-</div>
+<img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 
 <div align="center" class="page">
 	<table width="800" border="0">
