restored some old formatting to about page (without tables this time)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8926 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -14,20 +14,16 @@
 <img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 
 <div class="page">
-	<h1>This node is powered by <% SmartAgent %></h1>
+	<h3 class="darkgray">This node is powered by <a href="http://shareaza.sourceforge.net/?id=download"><% SmartAgent %></a></h3>
+	
 	<ul>
 		<li><a href="gnutella:browse:<% ListenIP %>">Browse this node in <% Client %></a></li>
-		<li><a href="/remote/">Remotely access this node</a></li>
+		<li style="margin-right: 0px;"><a href="/remote/">Remotely access this node</a></li>
 	</ul>
-	<h1>What Is <% Client %>?</h1>
+	<h3 class="darkgray">What Is <a href="http://shareaza.sourceforge.net/"><% Client %></a>?</h3>
 	<p>
 		<% Client %> is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. <% Client %> is <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.
 	</p>
-	<ul>
-		<li><a href="http://shareaza.sourceforge.net/">Visit the <% Client %> Homepage</a></li>
-		<li><a href="http://shareaza.sourceforge.net/?id=download">Get <% Client %> Now</a></li>
-	</ul>
-	<h1>Neighbours</h1>
 	<table width="100%" cellspacing="0" class="nodeinfo">
 		<tr>
 			<th width="170" align="center" valign="top">Neighbor Address</th>
