now validates as xhtml 1.0 strict
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8927 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/About.htm
+++ b/shareaza/Res/About.htm
@@ -1,6 +1,5 @@
 200 OK
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,9 +10,9 @@
 </head>
 <body class="imgheader">
 
+<div class="page">
 <img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 
-<div class="page">
 	<h3 class="darkgray">This node is powered by <a href="http://shareaza.sourceforge.net/?id=download"><% SmartAgent %></a></h3>
 	
 	<ul>
@@ -26,11 +25,11 @@
 	</p>
 	<table width="100%" cellspacing="0" class="nodeinfo">
 		<tr>
-			<th width="170" align="center" valign="top">Neighbor Address</th>
-			<th width="100" align="center" valign="top">Uptime</th>
-			<th width="100" align="center" valign="top">Mode</th>
-			<th width="170" align="center" valign="top">User Agent</th>
-			<th width="80" align="center" valign="top">&nbsp;</th>
+			<th class="col1_4" align="center" valign="top">Neighbor Address</th>
+			<th class="col2_3" align="center" valign="top">Uptime</th>
+			<th class="col2_3" align="center" valign="top">Mode</th>
+			<th class="col1_4" align="center" valign="top">User Agent</th>
+			<th align="center" valign="top">&nbsp;</th>
 		</tr>	
 		<% Neighbours 
 		<tr>
