Unified system log messages (and other texts).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9097 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Res/Browser.htm
+++ b/shareaza/Res/Browser.htm
@@ -1,6 +1,6 @@
 403 Please Share
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -10,31 +10,21 @@
 <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
 <body class="imgheader">
-
+<div class="page">
 <img src="/header_1.png" width="624" height="172" alt="<% Client %>" />
 
-<div align="center" class="page">
-	<table width="800" border="0">
-	<tr>
-		<td>
-			<h1>Please Share</h1>
-			<p>
-				Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden on available upload resources.
-			</p>
-			<p>
-				It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.
-			</p>
-			<h1>What Is <% Client %>?</h1>
-			<p>
-				<% Client %> is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. <% Client %> is <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.
-			</p>
-			<ul>
-				<li><a href="http://shareaza.sourceforge.net/">Visit the <% Client %> Homepage</a></li>
-				<li><a href="http://shareaza.sourceforge.net/?id=download">Get <% Client %> Now</a></li>
-			</ul>
-		</td>
-	</tr>
-	</table>
+<h3 class="darkgray">Please Share</h3>
+<p>Sorry, this server has disabled serving files to web browsers. Web browsers do not contribute content to the P2P network, and place an unequal burden on available upload resources. It's easy to gain access to the complete content of the P2P network - simply download one of the many popular P2P clients.</p>
+
+<h3 class="darkgray">This node is powered by <a href="http://shareaza.sourceforge.net/?id=download"><% SmartAgent %></a></h3>
+<ul>
+	<li><a href="http://shareaza.sourceforge.net/">Visit the <% Client %> Homepage</a></li>
+	<li style="margin-right: 0px;"><a href="http://shareaza.sourceforge.net/?id=download">Get <% Client %> Now</a></li>
+</ul>
+
+<h3 class="darkgray">What Is <a href="http://shareaza.sourceforge.net/"><% Client %></a>?</h3>
+<p><% Client %> is a peer-to-peer client for Windows that allows you to download any file-type found on several popular P2P networks. <% Client %> is <strong>FREE</strong> and contains <strong>NO</strong> spyware or third-party products.</p>
+
 </div>
 </body>
 </html>
